Documentation edits made through Mintlify web editor

--- a/missions/story/franklinandlamar.mdx
+++ b/missions/story/franklinandlamar.mdx
@@ -6,17 +6,17 @@ icon: "cars"
 
 ### 📝 Therapy Session
 
-> The scene fades in with <span className="michael">Michael</span> having a discussion with <span className="drfriedlander">Dr. Frienlander</span>, at his office.
+> The scene fades in with <span className="michael">Michael</span> having a discussion with <span className="drfriedlander">Dr. Friedlander</span>, at his office.
 
-<span className="drfriedlander">Dr. Frienlander:</span> Your son, James. He's a good kid?
+<span className="drfriedlander">Dr. Friedlander:</span> Your son, James. He's a good kid?
 
 <span className="michael">Michael:</span> He's a good kid? A good kid? Why? Does he help the fuckin' poor? No. He sits on his ass all day, smoking dope and jerkin' off while he plays that fucking game. If that's our standard for goodness, then no wonder this country's screwed.
 
-<span className="drfriedlander">Dr. Frienlander:</span> And what about you?
+<span className="drfriedlander">Dr. Friedlander:</span> And what about you?
 
 <span className="michael">Michael:</span> What about me?
 
-> <span className="drfriedlander">Dr. Frienlander</span> motions his hands, wanting <span className="michael">Michael</span> to talk.
+> <span className="drfriedlander">Dr. Friedlander</span> motions his hands, wanting <span className="michael">Michael</span> to talk.
 
 <span className="michael">Michael:</span> Hey...
 
@@ -24,11 +24,11 @@ icon: "cars"
 
 <span className="michael">Michael:</span> I didn't have the advantages that kid has. By the time I was his age, I'd already been in prison twice. I robbed banks, I ran whores, I smuggled dope.
 
-<span className="drfriedlander">Dr. Frienlander:</span> And you consider them achievements?
+<span className="drfriedlander">Dr. Friedlander:</span> And you consider them achievements?
 
 <span className="michael">Michael:</span> These were the opportunities I had. At least I took 'em.
 
-<span className="drfriedlander">Dr. Frienlander:</span> And where did these opportunities get you, Michael?
+<span className="drfriedlander">Dr. Friedlander:</span> And where did these opportunities get you, Michael?
 
 <span className="michael">Michael:</span> They got me right...
 
@@ -36,27 +36,27 @@ icon: "cars"
 
 <span className="michael">Michael:</span> ...fuckin' here\! The end of the road\! With a big house and a useless kid, and I'm stuck talking to you because no one else gives a shit\! Oh, I'm living the dream, baby\! And that dream is fucked\! It is... fucking fucked\!
 
-<span className="drfriedlander">Dr. Frienlander:</span> Let it all out.
+<span className="drfriedlander">Dr. Friedlander:</span> Let it all out.
 
 > <span className="michael">Michael</span> sits back down.
 
 <span className="michael">Michael:</span> I think I just did.
 
-> <span className="drfriedlander">Dr. Frienlander</span> glances at his watch, noticing the time.
+> <span className="drfriedlander">Dr. Friedlander</span> glances at his watch, noticing the time.
 
-<span className="drfriedlander">Dr. Frienlander:</span> Oh, well I, think that's all we have time for. Same time next week?
+<span className="drfriedlander">Dr. Friedlander:</span> Oh, well I, think that's all we have time for. Same time next week?
 
 <span className="michael">Michael:</span> I guess...
 
-> <span className="michael">Michael</span> stands back up and walks towards the door to leave <span className="drfriedlander">Dr. Frienlander's</span> office.
+> <span className="michael">Michael</span> stands back up and walks towards the door to leave <span className="drfriedlander">Dr. Friedlander's</span> office.
 
 <span className="michael">Michael:</span> I gotta tell you, I ain't too sure this shit is workin' for me.
 
-<span className="drfriedlander">Dr. Frienlander:</span> Hm.
+<span className="drfriedlander">Dr. Friedlander:</span> Hm.
 
-> <span className="drfriedlander">Dr. Frienlander</span> stands up from his chair.
+> <span className="drfriedlander">Dr. Friedlander</span> stands up from his chair.
 
-<span className="drfriedlander">Dr. Frienlander:</span> Well, a sense of overriding futility is a vital part of the process. Embrace it.
+<span className="drfriedlander">Dr. Friedlander:</span> Well, a sense of overriding futility is a vital part of the process. Embrace it.
 
 <span className="michael">Michael:</span> Whatever you say, Doc.
 
@@ -169,13 +169,13 @@ icon: "cars"
 
 > If at any point <span className="franklin">Franklin</span> gets ahead of Lamar in the race.
 
-<span className="lamar">Lamar:</span> How the fuck you get in front of me?
-<span className="alternative">Alternative:</span> How the fuck did you get up front?
-<span className="alternative">Alternative:</span> That you in front, you fat motherfucker?
+<span className="lamar">Lamar:</span> How the fuck you get in front of me?  
+<span className="alternative">Alternative:</span> How the fuck did you get up front?  
+<span className="alternative">Alternative:</span> That you in front, you fat motherfucker?  
 
-<span className="franklin">Franklin:</span> Your slow ass should be askin' why I didn't get here sooner.
-<span className="alternative">Alternative:</span> I been faster than your lanky ass since kindergarden.
-<span className="alternative">Alternative:</span> Who else, you lanky bitch?
+<span className="franklin">Franklin:</span> Your slow ass should be askin' why I didn't get here sooner.  
+<span className="alternative">Alternative:</span> I been faster than your lanky ass since kindergarden.  
+<span className="alternative">Alternative:</span> Who else, you lanky bitch?  
 
 <span className="franklin">Franklin:</span> Eh, remember, we got to be careful with these rides, homie. ‘Cause Simeon ain't about to dock my pay again...
 
@@ -207,7 +207,7 @@ icon: "cars"
 
 > <span className="lamar">Lamar</span> smashes the security barrier, and speeds through the studio, with <span className="franklin">Franklin</span> in close pursuit. They speed through, narrowly avoiding people in the process.
 
-<span className="jimmy">Jimmmy:</span> What the fuck?\!
+<span className="jimmy">Jimmy:</span> What the fuck?\!
 
 <span className="franklin">Franklin:</span> Oh, we flimin' shit here\! Huh?
 
